[package]
name = "las-poly"
version = "0.1.1"
edition = "2021"

[dependencies]
approx = "0.5.1"
clap = { version = "4.5.19", features = ["derive"] }
geo = "0.28.0"
geojson = "0.24.1"
las = "0.9.1"
num_cpus = "1.16.0"
proj = "0.27.2"
rand = "0.8.5"
serde = "1.0.216"
serde_json = "1.0.128"
tempfile = "3.14.0"
thiserror = "2.0.8"
threadpool = "1.8.1"
union-find = "0.4.3"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
